# ocos-blockchain

./: README.md  SECURITY.md
bitcoin_logs/2008/: test-20081031.bitlog  test-20081031.bitlog.sha256  test-20081031.bitlog.sig
bitcoin_logs/2009/: README.md  bootstrap-20090103.bitlog
docs/vision/: S470SHI_Chain.md
logs/: README.md
logs/bitcoin-wallets-legacy/wallets/: wallet_00001.dat.aes  wallet_00002.dat.aes  wallet_00003.dat.aes  wallet_00004.dat.aes  wallet_00005.dat.aes  wallet_00006.dat.aes  wallet_00007.dat.aes  wallet_00008.dat.aes  wallet_00009.dat.aes  wallet_00010.dat.aes  wallet_00011.dat.aes  wallet_00012.dat.aes  wallet_00013.dat.aes  wallet_00014.dat.aes  wallet_00015.dat.aes  (+1800 more)
logs/history/: bitcoin-legacy-2009-2025.md
ocoschain/infra/: ansible-playbook.yml  config.yaml  docker-compose.yml  inventory.ini  node-plan.yaml
s470shi-language/: README.md
s470shi-vm/: Cargo.toml  README.md
s470shi-vm/src/: parser.rs  reputation.rs  stream_tape.rs  zk_verify.rs
s470shi-vm/tests/: dao_exec.rs
s470shi-vm/wasm_executor/: exec.rs
src/: README.md  lib.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/blockchain/: block.rs  chain.rs  genesis.rs  mod.rs
src/consensus/: mod.rs  pos.rs  pow.rs
src/crypto/: hash.rs  keypair.rs  mod.rs  signature.rs
src/network/: auth.rs  client.rs  message.rs  metrics.rs  mod.rs  peer.rs  router.rs  server.rs  testnet_sim.rs
src/node/: mod.rs  node.rs  runner.rs
src/transaction/: mempool.rs  mod.rs  receipt.rs  tx.rs  validator.rs
src/wallet/: bip44.rs  keystore.rs  mnemonic.rs  multisig.rs  qr.rs  wallet.rs
(+3 files in other folders)
